--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
-
 node_js:
-  - "0.10"
   - "0.12"
-
-# whitelisted branches
+  - "0.11"
+  - "0.10"
+  - "iojs"
+  - "iojs-v1.0.4"
 branches:
   only:
     - master
