--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "wi2",
   "license": "MIT",
   "dependencies": {
+    "html-minifier": "^0.7.2",
     "isstream": "^0.1.2",
     "machine": "^3.0.0",
     "marked": "^0.3.3",
@@ -33,7 +34,8 @@
       "create-write",
       "zip",
       "unzip",
-      "md"
+      "md",
+      "minify"
     ],
     "testsUrl": "https://travis-ci.org/"
   },
