new machine insert before or after a content string

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
       "md",
       "minify",
       "stringify",
-      "replace"
+      "replace",
+      "insert"
     ],
     "testsUrl": "https://travis-ci.org/"
   },
